[gd_scene load_steps=31 format=3 uid="uid://jxr2ybiww67g"]

[ext_resource type="Script" path="res://scenes/unit/skills/projectiles/homing_bolt.gd" id="1_1jspm"]
[ext_resource type="Texture2D" uid="uid://4oayuhhcof32" path="res://assets/art/projectile/fire_bolt.png" id="2_okb70"]
[ext_resource type="Script" path="res://scenes/unit/animation_control.gd" id="3_iu0e6"]
[ext_resource type="Script" path="res://scenes/custom_timer.gd" id="4_2kcd3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85n5x"]
atlas = ExtResource("2_okb70")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bl44"]
atlas = ExtResource("2_okb70")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bno3i"]
atlas = ExtResource("2_okb70")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2310"]
atlas = ExtResource("2_okb70")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rf70"]
atlas = ExtResource("2_okb70")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdeps"]
atlas = ExtResource("2_okb70")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usfwy"]
atlas = ExtResource("2_okb70")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ncfq"]
atlas = ExtResource("2_okb70")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq8sd"]
atlas = ExtResource("2_okb70")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rshnn"]
atlas = ExtResource("2_okb70")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i8m7"]
atlas = ExtResource("2_okb70")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkasv"]
atlas = ExtResource("2_okb70")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdpxy"]
atlas = ExtResource("2_okb70")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_heyx7"]
atlas = ExtResource("2_okb70")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2si5k"]
atlas = ExtResource("2_okb70")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwnpe"]
atlas = ExtResource("2_okb70")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg28m"]
atlas = ExtResource("2_okb70")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsj8o"]
atlas = ExtResource("2_okb70")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwn3j"]
atlas = ExtResource("2_okb70")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_geggu"]
atlas = ExtResource("2_okb70")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q8mp"]
atlas = ExtResource("2_okb70")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2av1"]
atlas = ExtResource("2_okb70")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qyxk"]
atlas = ExtResource("2_okb70")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5wmt"]
atlas = ExtResource("2_okb70")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvlxu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85n5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bl44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bno3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2310")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rf70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdeps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usfwy")
}],
"loop": false,
"name": &"DEATH",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85n5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ncfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq8sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rshnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i8m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkasv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdpxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heyx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2si5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usfwy")
}],
"loop": false,
"name": &"FADE",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg28m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsj8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwn3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geggu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2av1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qyxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5wmt")
}],
"loop": true,
"name": &"WALK",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkk6h"]
radius = 6.0

[node name="HomingFirebolt" type="Area2D"]
top_level = true
y_sort_enabled = true
collision_layer = 0
collision_mask = 2
script = ExtResource("1_1jspm")
projectile_name = "HomingFirebolt"
pierce = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_hvlxu")
animation = &"WALK"
frame_progress = 0.746731
script = ExtResource("3_iu0e6")
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/2d_art",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://assets/aseprite/fire_bolt.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "1abc827529d1bb3421432ee107857794"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rkk6h")

[node name="LiveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource("4_2kcd3")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
